@@ -629,12 +629,15 @@ reloo <- function(x, ...) {
 #' times each leaving out one-\eqn{K}th of the original data.
 #' 
 #' @inheritParams LOO
-#' @param K For \code{kfold}, the number of subsets of equal (if possible) size
+#' @param K The number of subsets of equal (if possible) size
 #'   into which the data will be randomly partitioned for performing
 #'   \eqn{K}-fold cross-validation. The model is refit \code{K} times, each time
 #'   leaving out one of the \code{K} subsets. If \code{K} is equal to the total
 #'   number of observations in the data then \eqn{K}-fold cross-validation is
 #'   equivalent to exact leave-one-out cross-validation.
+#' @param group Optional name of a singla grouping variable of factor in the model 
+#'   by which to split the data into subsets, each time omitting one of the
+#'   factor levels. If \code{group} is specified, argument \code{K} is ignored.
 #' @param save_fits If \code{TRUE}, a component \code{fits} is added to 
 #'   the returned object to store the cross-validated \code{brmsfit} 
 #'   objects and the indices of the omitted observations for each fold. 
