@@ -5,6 +5,9 @@
 \section{CHANGES IN VERSION 1.10.0++}{
   \subsection{NEW FEATURES}{
     \itemize{
+      \item Add argument \code{group} to method
+      \code{kfold} for defining omitted subsets
+      according to a grouping variable or factor.
       \item Allow addition argument \code{se}
       in \code{skew_normal} models.
     }
